# auto-infra

./: .flake8  .gitignore  CHANGELOG.md  COMMANDS.md  Dockerfile  Makefile  README.md  bootstrap.sh  pyproject.toml  tox.ini
auto_infra/: __init__.py  __main__.py  main.py
auto_infra/lib/: common.py  setup_logger.py  terraform_command.py
tests/: test_auto_infra.py
tests/terraform/test_1/: outputs.tf  test-random.tf
